<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- scooby_attendance strings -->

	<string name="app_name">Page 1</string>
	<string name="ek_img_content">ExportKit Image</string>
	<string name="ingresar_string">Ingresar</string>
	<string name="_registrarse_string">Registrarse</string>
	<string name="correo_institucional_string">Correo Institucional</string>
	<string name="contrase_a_string">Contrasea</string>
	<string name="_________________string">* * * * * * * * </string>
	<string name="alumno_unsa_edu_pe_string">alumno@unsa.edu.pe</string>
	<string name="__olvidaste_tu_contrase_a__string">Olvidaste tu contrasea?</string>
	<string name="ingresar_ek1_string">Ingresar</string>
	<string name="cursos_hoy_string">Cursos Hoy</string>
	<string name="bienvenido_estudiante_string">Bienvenido Estudiante</string>
	<string name="ciencia_de_la_computaci_n_string">Ciencia de la Computacin</string>
	<string name="alumno_apellido_string">Alumno Apellido </string>
	<string name="estudiante_unsa_edu_pe_string">estudiante@unsa.edu.pe</string>
	<string name="estudiante_de_la_escuela_ciencia_de_la_computaci_n_de_produccion_y_servicios_string">Estudiante de la Escuela Ciencia de la Computacin de Produccion y Servicios</string>
	<string name="_7_00_am___8_40_am_string">7:00 AM - 8:40 AM</string>
	<string name="_3_00_pm___4_40_pm_string">3:00 PM - 4:40 PM</string>
	<string name="_8_50_am___10_30_am_string">8:50 AM - 10:30 AM</string>
	<string name="marcar_asistencia_string">Marcar Asistencia</string>
	<string name="c_lculo_en_varias_variables_string">Clculo en Varias Variables</string>
	<string name="trabajo_intedisciplinar_string">Trabajo Intedisciplinar</string>
	<string name="ingl_s_t_cnico_3_string">Ingls Tcnico 3</string>
	<string name="horario_string">Horario</string>
	<string name="ir_a_reportes_string">Ir a Reportes</string>
	<string name="mi_perfil_string">Mi perfil</string>
	<string name="salir_de_la_sesi_n_string">Salir de la Sesin</string>
	<string name="informaci_n_personal_string">Informacin personal</string>
	<string name="alumno_apellido_ek1_string">Alumno Apellido</string>
	<string name="alumno_unsa_edu_pe_ek1_string">alumno@unsa.edu.pe</string>
	<string name="estudiante_de_la_escuela_ciencia_de_la_computaci_n_de_produccion_y_servicios_ek1_string">Estudiante de la Escuela Ciencia de la Computacin de Produccion y Servicios</string>
	<string name="__234_9011039271_string">+234 9011039271</string>
	<string name="agenda_string">Agenda</string>
	<string name="editar_perfil_string">Editar Perfil</string>
	<string name="asesoria_string">Asesoria </string>
	<string name="soporte_string">Soporte</string>
	<string name="_cambiar_contrase_a_string">Cambiar contrasea</string>
	<string name="horario_ek1_string">Horario</string>
	<string name="mi_rcoles_string">Mircoles</string>
	<string name="calculo_en_varias_variables_7_00_am___8_40_am_string">Calculo en Varias variables7:00 AM - 8:40 AM</string>
	<string name="desarrollo_basado_en_plataformas_8_50_am___10_30_am_string">Desarrollo Basado en plataformas8:50 AM - 10.30 AM</string>
	<string name="calculo_en_varias_variables_7_00_am___8_40_am_ek1_string">Calculo en Varias variables7:00 AM - 8:40 AM</string>
	<string name="desarrollo_basado_en_plataformas_8_50_am___10_30_am_ek1_string">Desarrollo Basado en plataformas8:50 AM - 10.30 AM</string>
	<string name="lunes_string">Lunes</string>
	<string name="calculo_en_varias_variables_7_00_am___8_40_am_ek2_string">Calculo en Varias variables7:00 AM - 8:40 AM</string>
	<string name="ingles_t_cnico_3_3_00_pm___4_00_pm_string">Ingles Tcnico 33:00 PM - 4:00 PM</string>
	<string name="martes_string">Martes</string>
	<string name="mi_rcoles_ek1_string">Mircoles</string>
	<string name="guardar_string">Guardar</string>
	<string name="editar_perfil_ek1_string">Editar perfil</string>
	<string name="celular_string">Celular</string>
	<string name="xxx_xxx_xxx_string">XXX XXX XXX</string>
	<string name="ciudad_string">Ciudad</string>
	<string name="arequipa_string">Arequipa</string>
	<string name="sin_conexi_n_string">Sin conexin</string>
	<string name="tu_conexi_n_a_internet_no_esta_disponible__int_ntelo_de_nuevo__string">Tu conexin a Internet no esta disponible, intntelo de nuevo.</string>
	<string name="intentar_de_nuevo_string">Intentar de nuevo</string>
	<string name="login_string">Login</string>
	<string name="cambiar_contrase_a_ek1_string">Cambiar contrasea</string>
	<string name="contrase_a_ek1_string">Contrasea</string>
	<string name="_________________ek1_string">* * * * * * * * </string>
	<string name="confirmar_contrase_a_string">Confirmar Contrasea</string>
	<string name="_________________ek2_string">* * * * * * * * </string>
	<string name="nueva_contrase_a_string">Nueva contrasea</string>
	<string name="_________________ek3_string">* * * * * * * * </string>
	<string name="guardar_cambios_string">Guardar cambios</string>
	<string name="calculo_en_varias_variables_string">Calculo en varias variables </string>
	<string name="reportes_string">Reportes</string>
	<string name="calculo_en_varias_variables_ek1_string">Calculo en varias variables </string>
	<string name="calculo_en_varias_variables_ek2_string">Calculo en varias variables </string>
	<string name="calculo_en_varias_variables_ek3_string">Calculo en varias variables </string>
	<string name="calculo_en_varias_variables_ek4_string">Calculo en varias variables </string>
	<string name="calculo_en_varias_variables_ek5_string">Calculo en varias variables </string>
	<string name="seleccione_un_curso_string">Seleccione un curso</string>
	<string name="soporte_ek1_string">Soporte </string>
	<string name="grupo_5_trabajo_interdiciplinar_string">GRUPO 5TRABAJO INTERDICIPLINAR</string>
	<string name="andres_carrasco_929929556_fiorela_villarroel_929929556_merisabel_ruelas_929929556_piero_vizcarra_929929556_string">andres CARRASCO                 929929556Fiorela Villarroel               929929556Merisabel Ruelas                 929929556Piero VIZCARRA                      929929556</string>
	<string name="agenda_ek1_string">Agenda</string>
	<string name="delegados_string">Delegados</string>
	<string name="primer_a_o_nombres_apellido1_929929556_nombres_apellido1_929929556_segundo_a_o_nombres_apellido1_929929556_nombres_apellido1_929929556_tercer_a_o_nombres_apellido1_929929556_nombres_apellido1_929929556_cuarto_a_o__nombres_apellido1_apellido2___929929556_nombres_apellido1_apellido2___929929556_cuarto_a_o__nombres_apellido1_apellido2___929929556_nombres_apellido1_apellido2___929929556_string">Primer aoNombres Apellido1                        929929556Nombres Apellido1                        929929556Segundo aoNombres Apellido1                        929929556Nombres Apellido1                        929929556Tercer aoNombres Apellido1                        929929556Nombres Apellido1                        929929556Cuarto ao:Nombres Apellido1 Apellido2 - 929929556Nombres Apellido1 Apellido2 - 929929556Cuarto ao:Nombres Apellido1 Apellido2 - 929929556Nombres Apellido1 Apellido2 - 929929556</string>
	<string name="ciencia_de_la_computaci_n_ek1_string">Ciencia de la Computacin</string>
	<string name="computercs_unsa_edu_pe_string">computercs@unsa.edu.pe</string>
	<string name="director_string">Director</string>
	<string name="nombre_apellido_apellido_horario__10_00am___12_00pm__51929929556_string">Nombre Apellido Apellido Horario: 10:00AM - 12:00PM+51929929556</string>
	<string name="secretar_a_string">Secretara</string>
	<string name="secretar_a_ek1_string">Secretara</string>
	<string name="raquel_apellido_apellido_horario__10_00am___12_00pm__51929929556_string">Raquel Apellido Apellido Horario: 10:00AM - 12:00PM+51929929556</string>
	<string name="contactarme_con_secretar_a_string">Contactarme con Secretara</string>
	<string name="contactarme_con_la_escuela_string">Contactarme con la escuela</string>
	<string name="asesor_a_string">Asesora</string>
	<string name="nombres_apellido1_929929556_nombres_apellido1_929929556_nombres_apellido1_929929556_nombres_apellido1_929929556_nombres_apellido1_929929556_nombres_apellido1_929929556_nombres_apellido1_929929556_nombres_apellido1_929929556_nombres_apellido1_929929556_nombres_apellido1_929929556_string">Nombres Apellido1                        929929556Nombres Apellido1                        929929556Nombres Apellido1                        929929556Nombres Apellido1                        929929556Nombres Apellido1                        929929556Nombres Apellido1                        929929556Nombres Apellido1                        929929556Nombres Apellido1                        929929556Nombres Apellido1                        929929556Nombres Apellido1                        929929556</string>
	<string name="centro_estudiantil_string">Centro estudiantil</string>
	<string name="roxana_flores_quispe_string">Roxana Flores Quispe</string>
	<string name="computercs_unsa_edu_pe_ek1_string">computercs@unsa.edu.pe</string>
	<string name="contactarse_con_tutor_a_string">Contactarse con Tutora</string>
	<string name="__olvidaste_tu_contrase_a__ek1_string">Olvidaste tu contrasea?</string>
	<string name="ingresa_su_correo_institucional___te_enviaremos_las_instrucciones_para_restablecer_contrase_a_string">Ingresa su correo institucional , te enviaremos las instrucciones para restablecer contrasea </string>
	<string name="correo_electr_nico_institucional_string">Correo Electrnico institucional </string>
	<string name="alumno_unsa_edu_pe_ek2_string">alumno@unsa.edu.pe</string>
	<string name="enviar_string">Enviar</string>
	<string name="registrarse_ek1_string">Registrarse</string>
	<string name="login_ek1_string">Login</string>
	<string name="registrarse_ek2_string">Registrarse</string>
	<string name="nombres_string">Nombres</string>
	<string name="celular_ek1_string">Celular</string>
	<string name="xxx_xxx_xxx_ek1_string">XXX XXX XXX</string>
	<string name="cui_string">CUI</string>
	<string name="dni_string">DNI</string>
	<string name="_29xxxxxx_string">29XXXXXX</string>
	<string name="correo_electr_nico_institucional_ek1_string">Correo Electrnico Institucional</string>
	<string name="alumno_gmail_com_string">alumno@gmail.com</string>
	<string name="contrase_a_ek2_string">Contrasea</string>
	<string name="ciudad_ek1_string">Ciudad</string>
	<string name="arequipa_ek1_string">Arequipa</string>
	<string name="__________________string">****************</string>
	<string name="_20xxxxxx_string">20XXXXXX</string>
	<string name="apellidos_string">Apellidos</string>
	<string name="apellido1_apellido2_string">Apellido1 Apellido2</string>
	<string name="apellido1_apellido2_ek1_string">Apellido1 Apellido2</string>
	<string name="reporte_por_curso_string">Reporte por curso</string>
	<string name="informaci_n_string">Informacin</string>
	<string name="docente__nombre1_apellido_1_string">Docente: Nombre1 Apellido 1</string>
	<string name="numero_de_creditos__5_cantidad_de_examenes__3_string">Numero de Creditos: 5Cantidad de examenes: 3</string>
	<string name="delegado__nombre1_apellido1_string">Delegado: Nombre1 Apellido1</string>
	<string name="calculo_en_varias_variables_ek6_string">Calculo en Varias Variables </string>
	<string name="reporte_string">Reporte</string>
	<string name="promedio__4_3_string">Promedio: 4.3</string>
	<string name="tardanzas__1_string">Tardanzas: 1</string>
	<string name="faltas__0_string">Faltas: 0</string>
	<string name="cargando_string">Cargando</string>
	<string name="scooby_attendance_string">Scooby Attendance </string>
</resources>