<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		scooby_attendance
	 *	@date 		1628645649981
	 *	@title 		Page 1
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.figma
	 *
	 */
	-->
	<ScrollView android:id="@+id/iphone_11_pro_max___36" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >







			<RelativeLayout android:id="@+id/page_iphone_11_pro_max___36_ek1"
				android:layout_marginTop="0dp"
				android:layout_marginStart="0dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/_bg__iphone_11_pro_max___36_ek2"
					android:background="@drawable/_bg__iphone_11_pro_max___36_ek2_shape"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="420dp"
					android:layout_height="740dp" />

				<View android:id="@+id/rectangle_2_ek4"
					android:background="@drawable/rectangle_2_ek4_shape"
					 android:alpha="0.12"
					 android:layout_marginStart="50dp"
					android:layout_marginTop="785dp"
					android:layout_width="316dp"
					android:layout_height="72dp" />

				<TextView android:id="@+id/login"
					android:fontFamily="Allerta"
					android:textSize="17sp"
					android:textColor="@color/ingresar_ek1_color"
					android:layout_marginLeft="186dp"
					android:layout_marginTop="810dp"
					android:layout_width="62dp"
					android:layout_height="33.5dp"
					android:text="@string/login_string"
					 />

				<TextView android:id="@+id/cambiar_contrase_a_ek1"
					android:fontFamily="Allerta"
					android:textSize="18sp"
					android:textColor="@color/ingresar_color"
					android:layout_marginLeft="113dp"
					android:layout_marginTop="52dp"
					android:layout_width="194dp"
					android:layout_height="36dp"
					android:text="@string/cambiar_contrase_a_ek1_string"
					 />

				<TextView android:id="@+id/contrase_a_ek1"
					android:fontFamily="Allerta"
					android:alpha="0.4"
					 android:textSize="15sp"
					android:textColor="@color/ingresar_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="326dp"
					android:layout_width="101dp"
					android:layout_height="29.5dp"
					android:text="@string/contrase_a_ek1_string"
					 />

				<View android:id="@+id/line_1_ek4"
					android:background="@drawable/line_1_ek4_shape"
					 android:layout_marginStart="57dp"
					android:layout_marginTop="385dp"
					android:layout_width="300dp"
					android:layout_height="0.5dp" />

				<TextView android:id="@+id/_________________ek1"
					android:fontFamily="Allerta"
					android:textSize="17sp"
					android:textColor="@color/ingresar_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="352dp"
					android:layout_width="110dp"
					android:layout_height="33.5dp"
					android:text="@string/_________________ek1_string"
					 />

				<TextView android:id="@+id/confirmar_contrase_a"
					android:fontFamily="Allerta"
					android:alpha="0.4"
					 android:textSize="15sp"
					android:textColor="@color/ingresar_color"
					android:layout_marginLeft="58dp"
					android:layout_marginTop="509dp"
					android:layout_width="183dp"
					android:layout_height="29.5dp"
					android:text="@string/confirmar_contrase_a_string"
					 />

				<View android:id="@+id/line_1_ek5"
					android:background="@drawable/line_1_ek5_shape"
					 android:layout_marginStart="58dp"
					android:layout_marginTop="568dp"
					android:layout_width="300dp"
					android:layout_height="0.5dp" />

				<TextView android:id="@+id/_________________ek2"
					android:fontFamily="Allerta"
					android:textSize="17sp"
					android:textColor="@color/ingresar_color"
					android:layout_marginLeft="58dp"
					android:layout_marginTop="535dp"
					android:layout_width="110dp"
					android:layout_height="33.5dp"
					android:text="@string/_________________ek2_string"
					 />

				<TextView android:id="@+id/nueva_contrase_a"
					android:fontFamily="Allerta"
					android:alpha="0.4"
					 android:textSize="15sp"
					android:textColor="@color/ingresar_color"
					android:layout_marginLeft="56dp"
					android:layout_marginTop="418dp"
					android:layout_width="153dp"
					android:layout_height="29.5dp"
					android:text="@string/nueva_contrase_a_string"
					 />

				<View android:id="@+id/line_1_ek6"
					android:background="@drawable/line_1_ek6_shape"
					 android:layout_marginStart="56dp"
					android:layout_marginTop="477dp"
					android:layout_width="300dp"
					android:layout_height="0.5dp" />

				<TextView android:id="@+id/_________________ek3"
					android:fontFamily="Allerta"
					android:textSize="17sp"
					android:textColor="@color/ingresar_color"
					android:layout_marginLeft="56dp"
					android:layout_marginTop="444dp"
					android:layout_width="110dp"
					android:layout_height="33.5dp"
					android:text="@string/_________________ek3_string"
					 />

				<View android:id="@+id/_rectangle_12_ek4"
					android:background="@drawable/_rectangle_12_ek4_shape"
					 android:layout_marginStart="47dp"
					android:layout_marginTop="618dp"
					android:layout_width="325dp"
					android:layout_height="70dp" />

				<TextView
					android:id="@+id/guardar_cambios"
					android:layout_width="428dp"
					android:layout_height="33.5dp"
					android:layout_gravity="center_horizontal|center"
					android:layout_marginLeft="-3dp"
					android:layout_marginTop="636dp"
					android:fontFamily="Allerta"
					android:gravity="center"
					android:text="@string/guardar_cambios_string"
					android:textColor="@color/ingresar_ek1_color"
					android:textSize="17sp" />


				<RelativeLayout android:id="@+id/chevron_left_ek9"
					android:layout_marginTop="51dp"
					android:layout_marginStart="64dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>

					<ImageView android:id="@+id/vector_ek15"
						android:src="@drawable/vector_ek15"
						android:contentDescription="vector_ek15"
						 android:layout_marginStart="9dp"
						android:layout_marginTop="6dp"
						android:layout_width="6dp"
						android:layout_height="12dp" />

				</RelativeLayout>

				<View android:id="@+id/rectangle_16_ek1"
					android:background="@drawable/rectangle_16_ek1_shape"
					 android:layout_marginStart="130dp"
					android:layout_marginTop="114dp"
					android:layout_width="171dp"
					android:layout_height="169dp" />

			</RelativeLayout>






		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>